[package]
name = "asset-storage-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.14"
ic-cdk = "0.18.5"
ic-cdk-timers = "0.12.2"
ic-stable-structures = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.17"
sha2 = "0.10.8"
ic-certification = "3.0.3"
hex = "0.4.3"
ic-http-certification = "3.0.3"
lazy_static = "1.4"